# competitive-programming

./: CMakeLists.txt  LICENSE  skeleton.cpp
